 * Fixed a problem where accepting a group chat invite on Sametime 8.5.1 would crash Adium. (Jonathan Rice and Jere Krischel) (#16114)
 * Fixed a problem where accepting a group chat invite on HipChat's XMPP server would crash Adium. (#16007)
 * Fix a problem preventing Adium from executing Applescripts when Gatekeeper is enabled.


Version 1.5.3 (8/12/2012)
 * Fixed another problem with the transcript viewer causing search to fail when closing and reopening the window. (#13586, #15699)
 * Fixed a problem with iTunes 10.6.3 on Mac OS X 10.6.8 causing the chat window's toolbar to break. (#16046)
 * Fixed crash at startup that was meant to be fixed in 1.5.2. (#15787)
 * Fixed a crash when receiving invalid XML on 10.8. (#16095)
 * Fixed an issue that caused logging in to Facebook to fail when login approvals are enabled. (#15705)
 * Icons set for group chat bookmarks will now show up on the tab bar in the chat window. (Andreas Marienborg) (#14484)
 * Fixed tables not being declared as such via VoiceOver. (Marco Zehe) (#16085)
 * Fixed a problem with emoticons scaling disproportionately in the yMous message style when using OS X 10.8.
 * Improved memory usage slightly.


Version 1.5.2 (7/21/2012)
 * Fixed an issue where the log indexer would never finish.
 * Fixed a number of crashes that could occur after closing the Transcript Viewer. (#15984, #15823)
 * Fixed crash at startup. (#15787)
 * Fixed crash upon cancelling the "Confirm quit" window. (#15900)
 * Fixed crash when closing the Novell Groupwise account options. (#16041)
 * Fixed a problem on retina Macbook Pros causing Adium to send too large user icons to the server, causing disconnects. (#16063)
 * Updated the Ukrainian localisation. (#16062)


Version 1.5.1 (6/7/2012)
  * Adium is now securely signed with an Apple Developer ID for OS X 10.8 / GateKeeper compatibility.
  * Updated to libpurple 2.10.4
    * AIM/ICQ: Fixed communication with buddies containing periods and underscores.